Only restore views for first main window

We changed the behaviour in last release so that new mainwindows dont
bring views of last mainwindow. However, it doesn't work if you are using
a named session as it will just keep restoring huge lists of views for
every new window

BUG: 465064